@@ -159,7 +159,7 @@ addsrcdir(char *dir)
 
 	/* make sure it is a directory */
 	if (lstat(compath(dir), &statstruct) == 0 && 
-	    (statstruct.st_mode & S_IFDIR)) {
+	    S_ISDIR(statstruct.st_mode)) {
 
 		/* note: there already is a source directory list */
 		if (nsrcdirs == msrcdirs) {
@@ -227,7 +227,7 @@ addincdir(char *name, char *path)
 
 	/* make sure it is a directory */
 	if (lstat(compath(path), &statstruct) == 0 && 
-	    (statstruct.st_mode & S_IFDIR)) {
+	    S_ISDIR(statstruct.st_mode)) {
 		if (incdirs == NULL) {
 			incdirs = mymalloc(mincdirs * sizeof(char *));
 			incnames = mymalloc(mincdirs * sizeof(char *));
@@ -494,7 +494,7 @@ scan_dir(const char *adir, BOOL recurse_dir)
 				if (lstat(path,&buf) == 0) {
 					file = entry->d_name;
 					if (recurse_dir 
-                                            && (buf.st_mode & S_IFDIR) ) {
+                                            && S_ISDIR(buf.st_mode) ) {
 						scan_dir(path, recurse_dir);
 					}
 					else if (
@@ -558,7 +558,7 @@ issrcfile(char *file)
 				/* some directories have 2 character
 				   suffixes so make sure it is a file */
 				if (lstat(file, &statstruct) == 0 && 
-				    (statstruct.st_mode & S_IFREG)) {
+				    S_ISREG(statstruct.st_mode)) {
 					return(YES);
 				}
 			}
@@ -570,7 +570,7 @@ issrcfile(char *file)
 			   0) {
 				/* make sure it is a file */
 				if (lstat(file, &statstruct) == 0 && 
-					(statstruct.st_mode & S_IFREG)) {
+					S_ISREG(statstruct.st_mode)) {
 					return(YES);
 				}
 			}
